Correct the Favicon stuffs

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
 			crossorigin="anonymous"
 		/>
 		<script src="https://kit.fontawesome.com/0f698361d2.js" crossorigin="anonymous"></script>
-		<title>DevConnector: A social network for developers</title>
+		<title>DevComm: A social network for developers</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
